fix dark mode code colours: now adjusted by contrast

--- a/css/code.css
+++ b/css/code.css
@@ -212,210 +212,210 @@ pre.highlight {
 pre.highlight table td { padding: 5px; }
 pre.highlight table pre { margin: 0; }
 pre.highlight .cm {
-  color: #000000;
+  color: #727261;
   font-style: italic;
 }
 pre.highlight .cp {
-  color: #000000;
+  color: #666666;
   font-weight: bold;
 }
 pre.highlight .c1 {
-  color: #000000;
+  color: #727261;
   font-style: italic;
 }
 pre.highlight .cs {
-  color: #000000;
+  color: #666666;
   font-weight: bold;
   font-style: italic;
 }
 pre.highlight .c, pre.highlight .ch, pre.highlight .cd, pre.highlight .cpf {
-  color: #000000;
+  color: #727261;
   font-style: italic;
 }
 pre.highlight .err {
-  color: #ffb3b3;
-  background-color: #0a0000;
+  color: #ff8a8a;
+  background-color: #342323;
 }
 pre.highlight .gd {
-  color: #9f9f9f;
-  background-color: #1f0606;
+  color: #ffffff;
+  background-color: #2e0c0c;
 }
 pre.highlight .ge {
-  color: #9f9f9f;
+  color: #ffffff;
   font-style: italic;
 }
 pre.highlight .gr {
-  color: #ff9f9f;
+  color: #ff8f8f;
 }
 pre.highlight .gh {
-  color: #000000;
+  color: #666666;
 }
 pre.highlight .gi {
-  color: #9f9f9f;
-  background-color: #061f06;
+  color: #ffffff;
+  background-color: #0c2e0c;
 }
 pre.highlight .go {
-  color: #000000;
+  color: #777777;
 }
 pre.highlight .gp {
-  color: #e9e9e9;
+  color: #aaaaaa;
 }
 pre.highlight .gs {
   font-weight: bold;
 }
 pre.highlight .gu {
-  color: #000000;
+  color: #555555;
 }
 pre.highlight .gt {
-  color: #ff9f9f;
+  color: #ff8f8f;
 }
 pre.highlight .kc {
-  color: #9f9f9f;
+  color: #ffffff;
   font-weight: bold;
 }
 pre.highlight .kd {
-  color: #9f9f9f;
+  color: #ffffff;
   font-weight: bold;
 }
 pre.highlight .kn {
-  color: #9f9f9f;
+  color: #ffffff;
   font-weight: bold;
 }
 pre.highlight .kp {
-  color: #9f9f9f;
+  color: #ffffff;
   font-weight: bold;
 }
 pre.highlight .kr {
-  color: #9f9f9f;
+  color: #ffffff;
   font-weight: bold;
 }
 pre.highlight .kt {
-  color: #dae9ff;
+  color: #8394c7;
   font-weight: bold;
 }
 pre.highlight .k, pre.highlight .kv {
-  color: #9f9f9f;
+  color: #ffffff;
   font-weight: bold;
 }
 pre.highlight .mf {
-  color: #9fffff;
+  color: #33cccc;
 }
 pre.highlight .mh {
-  color: #9fffff;
+  color: #33cccc;
 }
 pre.highlight .il {
-  color: #9fffff;
+  color: #33cccc;
 }
 pre.highlight .mi {
-  color: #9fffff;
+  color: #33cccc;
 }
 pre.highlight .mo {
-  color: #9fffff;
+  color: #33cccc;
 }
 pre.highlight .m, pre.highlight .mb, pre.highlight .mx {
-  color: #9fffff;
+  color: #33cccc;
 }
 pre.highlight .sb {
-  color: #ffaeda;
+  color: #ff4477;
 }
 pre.highlight .sc {
-  color: #ffaeda;
+  color: #ff4477;
 }
 pre.highlight .sd {
-  color: #ffaeda;
+  color: #ff4477;
 }
 pre.highlight .s2 {
-  color: #ffaeda;
+  color: #ff4477;
 }
 pre.highlight .se {
-  color: #ffaeda;
+  color: #ff4477;
 }
 pre.highlight .sh {
-  color: #ffaeda;
+  color: #ff4477;
 }
 pre.highlight .si {
-  color: #ffaeda;
+  color: #ff4477;
 }
 pre.highlight .sx {
-  color: #ffaeda;
+  color: #ff4477;
 }
 pre.highlight .sr {
-  color: #9fffc0;
+  color: #81ffa7;
 }
 pre.highlight .s1 {
-  color: #ffaeda;
+  color: #ff4477;
 }
 pre.highlight .ss {
-  color: #ff9fff;
+  color: #e64dc0;
 }
 pre.highlight .s, pre.highlight .sa, pre.highlight .dl {
-  color: #ffaeda;
+  color: #ff4477;
 }
 pre.highlight .na {
-  color: #9fffff;
+  color: #55d5d5;
 }
 pre.highlight .bp {
-  color: #000000;
+  color: #666666;
 }
 pre.highlight .nb {
-  color: #9fffff;
+  color: #2fb5e2;
 }
 pre.highlight .nc {
-  color: #dae9ff;
+  color: #8394c7;
   font-weight: bold;
 }
 pre.highlight .no {
-  color: #9fffff;
+  color: #55d5d5;
 }
 pre.highlight .nd {
-  color: #d3f0f0;
+  color: #97b8b8;
   font-weight: bold;
 }
 pre.highlight .ni {
-  color: #ff9fff;
+  color: #d555d5;
 }
 pre.highlight .ne {
-  color: #ff9f9f;
+  color: #ff9999;
   font-weight: bold;
 }
 pre.highlight .nf, pre.highlight .fm {
-  color: #ff9f9f;
+  color: #ff9999;
   font-weight: bold;
 }
 pre.highlight .nl {
-  color: #ff9f9f;
+  color: #ff9999;
   font-weight: bold;
 }
 pre.highlight .nn {
-  color: #e9e9e9;
+  color: #aaaaaa;
 }
 pre.highlight .nt {
-  color: #9f9fff;
+  color: #ababff;
 }
 pre.highlight .vc {
-  color: #9fffff;
+  color: #55d5d5;
 }
 pre.highlight .vg {
-  color: #9fffff;
+  color: #55d5d5;
 }
 pre.highlight .vi {
-  color: #9fffff;
+  color: #55d5d5;
 }
 pre.highlight .nv, pre.highlight .vm {
-  color: #9fffff;
+  color: #55d5d5;
 }
 pre.highlight .ow {
-  color: #9f9f9f;
+  color: #ffffff;
   font-weight: bold;
 }
 pre.highlight .o {
-  color: #9f9f9f;
+  color: #ffffff;
   font-weight: bold;
 }
 pre.highlight .w {
-  color: #000000;
+  color: #444444;
 }
 pre.highlight {
-  background-color: #1a1a1a;
+  background-color: #070707;
 }
 }
